# error-trace-rs

./: Cargo.toml  LICENSE-APACHE
src/: caller.rs  error_trace.rs  lib.rs  option_ext.rs  result_ext.rs  string_error.rs
tests/: context.rs  option_ext.rs  std_trace.rs  string_error.rs
