[package]
name = "error-trace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
owo-colors = { version = "4.0.0", optional = true }

[dev-dependencies]
anyhow = "1.0.80"

[features]
color = ["dep:owo-colors"]
